--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-digbang",
+  "name": "test-avantrip",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -22,6 +22,7 @@
     "react-dom": "^16.6.0",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.2.2",
+    "react-loadable": "^5.5.0",
     "react-scripts": "2.1.1",
     "remove": "^0.1.5",
     "styled-components": "^4.0.3",
